APIs modification and endpoints restructuring
