# controllers/Event.js
@@ -5,9 +5,20 @@ var Event = require('../service/EventService');
 
 module.exports.eventsEidContactGET = function eventsEidContactGET (req, res, next) {
   var eid = req.swagger.params['eid'].value;
-  var limit = req.swagger.params['limit'].value;
-  var offset = req.swagger.params['offset'].value;
-  Event.eventsEidContactGET(eid,limit,offset)
+  var month = req.swagger.params['month'].value;
+  Event.eventsEidContactGET(eid,month)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.eventsEidGET = function eventsEidGET (req, res, next) {
+  var eid = req.swagger.params['eid'].value;
+  var month = req.swagger.params['month'].value;
+  Event.eventsEidGET(eid,month)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -18,9 +29,10 @@ module.exports.eventsEidContactGET = function eventsEidContactGET (req, res, nex
 
 module.exports.eventsEidPresentsGET = function eventsEidPresentsGET (req, res, next) {
   var eid = req.swagger.params['eid'].value;
+  var month = req.swagger.params['month'].value;
   var limit = req.swagger.params['limit'].value;
   var offset = req.swagger.params['offset'].value;
-  Event.eventsEidPresentsGET(eid,limit,offset)
+  Event.eventsEidPresentsGET(eid,month,limit,offset)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -30,34 +42,10 @@ module.exports.eventsEidPresentsGET = function eventsEidPresentsGET (req, res, n
 };
 
 module.exports.eventsGET = function eventsGET (req, res, next) {
-  Event.eventsGET()
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
-module.exports.eventsMonthEidGET = function eventsMonthEidGET (req, res, next) {
-  var eid = req.swagger.params['eid'].value;
   var month = req.swagger.params['month'].value;
   var limit = req.swagger.params['limit'].value;
   var offset = req.swagger.params['offset'].value;
-  Event.eventsMonthEidGET(eid,month,limit,offset)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
-module.exports.eventsMonthGET = function eventsMonthGET (req, res, next) {
-  var month = req.swagger.params['month'].value;
-  var limit = req.swagger.params['limit'].value;
-  var offset = req.swagger.params['offset'].value;
-  Event.eventsMonthGET(month,limit,offset)
+  Event.eventsGET(month,limit,offset)
     .then(function (response) {
       utils.writeJson(res, response);
     })
