# controllers/Person.js
@@ -4,34 +4,10 @@ var utils = require('../utils/writer.js');
 var Person = require('../service/PersonService');
 
 module.exports.peopleGET = function peopleGET (req, res, next) {
-  Person.peopleGET()
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
-module.exports.peopleJobGET = function peopleJobGET (req, res, next) {
   var job = req.swagger.params['job'].value;
   var limit = req.swagger.params['limit'].value;
   var offset = req.swagger.params['offset'].value;
-  Person.peopleJobGET(job,limit,offset)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
-module.exports.peopleJobPidGET = function peopleJobPidGET (req, res, next) {
-  var pid = req.swagger.params['pid'].value;
-  var job = req.swagger.params['job'].value;
-  var limit = req.swagger.params['limit'].value;
-  var offset = req.swagger.params['offset'].value;
-  Person.peopleJobPidGET(pid,job,limit,offset)
+  Person.peopleGET(job,limit,offset)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -42,9 +18,24 @@ module.exports.peopleJobPidGET = function peopleJobPidGET (req, res, next) {
 
 module.exports.peoplePidContactForGET = function peoplePidContactForGET (req, res, next) {
   var pid = req.swagger.params['pid'].value;
+  var job = req.swagger.params['job'].value;
   var limit = req.swagger.params['limit'].value;
   var offset = req.swagger.params['offset'].value;
-  Person.peoplePidContactForGET(pid,limit,offset)
+  Person.peoplePidContactForGET(pid,job,limit,offset)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.peoplePidGET = function peoplePidGET (req, res, next) {
+  var pid = req.swagger.params['pid'].value;
+  var job = req.swagger.params['job'].value;
+  var limit = req.swagger.params['limit'].value;
+  var offset = req.swagger.params['offset'].value;
+  Person.peoplePidGET(pid,job,limit,offset)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -55,9 +46,10 @@ module.exports.peoplePidContactForGET = function peoplePidContactForGET (req, re
 
 module.exports.peoplePidInvolvedGET = function peoplePidInvolvedGET (req, res, next) {
   var pid = req.swagger.params['pid'].value;
+  var job = req.swagger.params['job'].value;
   var limit = req.swagger.params['limit'].value;
   var offset = req.swagger.params['offset'].value;
-  Person.peoplePidInvolvedGET(pid,limit,offset)
+  Person.peoplePidInvolvedGET(pid,job,limit,offset)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -68,7 +60,8 @@ module.exports.peoplePidInvolvedGET = function peoplePidInvolvedGET (req, res, n
 
 module.exports.peoplePidRoleGET = function peoplePidRoleGET (req, res, next) {
   var pid = req.swagger.params['pid'].value;
-  Person.peoplePidRoleGET(pid)
+  var job = req.swagger.params['job'].value;
+  Person.peoplePidRoleGET(pid,job)
     .then(function (response) {
       utils.writeJson(res, response);
     })
