# service/EventService.js
@@ -19,17 +19,36 @@ exports.EventDbSetup = function(connection){
 
 
 
-
 /**
  * gets the person in charge as contact for the event
  * retrieves the person that is the official contact for that event.
  *
  * eid String identifier for the event
- * limit Integer max number of items per page (optional)
- * offset Integer pagination offset for the given page (optional)
+ * month Integer month in which there is all the group of events (optional)
  * returns Object
  **/
-exports.eventsEidContactGET = function(eid,limit,offset) {
+exports.eventsEidContactGET = function(eid,month) {
+  return new Promise(function(resolve, reject) {
+    var examples = {};
+    examples['application/json'] = "{}";
+    if (Object.keys(examples).length > 0) {
+      resolve(examples[Object.keys(examples)[0]]);
+    } else {
+      resolve();
+    }
+  });
+}
+
+
+/**
+ * gets an the event from the selected month
+ * retrieves the event in a given month with a given identifier.
+ *
+ * eid String identifier for the event
+ * month Integer month in which there is all the group of events (optional)
+ * returns Object
+ **/
+exports.eventsEidGET = function(eid,month) {
   return new Promise(function(resolve, reject) {
     var examples = {};
     examples['application/json'] = "{}";
@@ -47,11 +66,12 @@ exports.eventsEidContactGET = function(eid,limit,offset) {
  * retrieves all the services presented in the event specified by the eid.
  *
  * eid String identifier for the event
+ * month Integer month in which there is all the group of events (optional)
  * limit Integer max number of items per page (optional)
  * offset Integer pagination offset for the given page (optional)
  * returns List
  **/
-exports.eventsEidPresentsGET = function(eid,limit,offset) {
+exports.eventsEidPresentsGET = function(eid,month,limit,offset) {
   return new Promise(function(resolve, reject) {
     var examples = {};
     examples['application/json'] = [ {
@@ -67,66 +87,6 @@ exports.eventsEidPresentsGET = function(eid,limit,offset) {
   "type" : "type",
   "sid" : "sid"
 } ];
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
-    }
-  });
-}
-
-
-/**
- * gets all the group of events
- * Take the list of every event
- *
- * returns List
- **/
-exports.eventsGET = function() {
-  return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = [ {
-  "eid" : "eid",
-  "schedule" : 0,
-  "contact" : "contact",
-  "description" : "description",
-  "endtime" : "2000-01-23T04:56:07.000+00:00",
-  "begintime" : "2000-01-23T04:56:07.000+00:00",
-  "place" : "place",
-  "eventname" : "eventname"
-}, {
-  "eid" : "eid",
-  "schedule" : 0,
-  "contact" : "contact",
-  "description" : "description",
-  "endtime" : "2000-01-23T04:56:07.000+00:00",
-  "begintime" : "2000-01-23T04:56:07.000+00:00",
-  "place" : "place",
-  "eventname" : "eventname"
-} ];
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
-    }
-  });
-}
-
-
-/**
- * gets an the event from the selected month
- * retrieves the event in a given month with a given identifier.
- *
- * eid String identifier for the event
- * month Integer month in which there is all the group of events
- * limit Integer max number of items per page (optional)
- * offset Integer pagination offset for the given page (optional)
- * returns Object
- **/
-exports.eventsMonthEidGET = function(eid,month,limit,offset) {
-  return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = "{}";
     if (Object.keys(examples).length > 0) {
       resolve(examples[Object.keys(examples)[0]]);
     } else {
@@ -140,12 +100,12 @@ exports.eventsMonthEidGET = function(eid,month,limit,offset) {
  * gets all the events by the selected month
  * retrieves all the events happening on a given month
  *
- * month Integer month in which there is all the group of events
+ * month Integer month in which there is all the group of events (optional)
  * limit Integer max number of items per page (optional)
  * offset Integer pagination offset for the given page (optional)
  * returns List
  **/
-exports.eventsMonthGET = function(month,limit,offset) {
+exports.eventsGET = function(month,limit,offset) {
   return new Promise(function(resolve, reject) {
     var examples = {};
     examples['application/json'] = [ {
